; ModuleID = '/home/carl/AnghaBench/stb/tests/caveview/extr_cave_main.c_process_tick.c'
source_filename = "/home/carl/AnghaBench/stb/tests/caveview/extr_cave_main.c_process_tick.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @process_tick(float %0) #0 {
  %2 = alloca float, align 4
  store float %0, float* %2, align 4
  br label %3

3:                                                ; preds = %6, %1
  %4 = load float, float* %2, align 4
  %5 = fcmp ogt float %4, 0x3F91111120000000
  br i1 %5, label %6, label %10

6:                                                ; preds = %3
  %7 = call i32 @process_tick_raw(float 0x3F91111120000000)
  %8 = load float, float* %2, align 4
  %9 = fsub float %8, 0x3F91111120000000
  store float %9, float* %2, align 4
  br label %3

10:                                               ; preds = %3
  %11 = load float, float* %2, align 4
  %12 = call i32 @process_tick_raw(float %11)
  ret void
}

declare dso_local i32 @process_tick_raw(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
